more tidy up after sorting out of location sets